--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,5 @@
+
+@use "tailwindcss";
 /*
  * App Global CSS
  * ----------------------------------------------------------------------------
@@ -19,12 +21,12 @@
 @import "@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
-// @import "@ionic/angular/css/padding.css";
-// @import "@ionic/angular/css/float-elements.css";
-// @import "@ionic/angular/css/text-alignment.css";
-// @import "@ionic/angular/css/text-transformation.css";
-// @import "@ionic/angular/css/flex-utils.css";
-@import "tailwindcss";
+@import "@ionic/angular/css/padding.css";
+@import "@ionic/angular/css/float-elements.css";
+@import "@ionic/angular/css/text-alignment.css";
+@import "@ionic/angular/css/text-transformation.css";
+@import "@ionic/angular/css/flex-utils.css";
+
 
 /**
  * Ionic Dark Mode
@@ -35,4 +37,6 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import '@ionic/angular/css/palettes/dark.system.css';
+// @import '@ionic/angular/css/palettes/dark.system.css';
+
+
